--- a/blogpost.html
+++ b/blogpost.html
@@ -41,7 +41,8 @@
                 <p>Santiago Harkes</p>
                 <p>Mat&iacute;as Cariboni</p>
                 <p>Juan Pablo Leyva</p>
-                <p>Diego</p>
+		        <p>Diego</p>
+		        <p>Edwin Eslover Romero Fonseca</p>
                 <p>Ildebrando</p>
                 <p>gonzalo986</p>
                 <p>Norbs</p>
