--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Practicas en Git y Github 2022</span>
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Farley Baca</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
