--- a/blogpost.html
+++ b/blogpost.html
@@ -833,7 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-                <p>Yoarcy Echazabal Perez</p>
+                <p>Yoarcy Echaz&aacute;bal P&eacute;rez</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
