--- a/blogpost.html
+++ b/blogpost.html
@@ -832,7 +832,8 @@
                 <p>Mario Yesid Acuña Garizado</p>
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
-                <p>Juan Carlos Carbajal Salgado</p>
+                <p>Juan Carlos Carbajal Salgado<p/>
+                <p>Bryan Vilca Marchand</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
