Commit al master del blogpost en su version más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href= "css/estilos.css" />
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el párrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título increíble y atractivo</h1>
+                <p>Y este es el párrafo de inicio donde se explicará que se puede hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
