--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,11 @@
             <div id="post">
                 <h1>Este es el título increíble y atractivo</h1>
                 <p>Y este es el párrafo de inicio donde se explicará que se puede hacer con ramas</p>
+                <p>
+                    Los blogs son la mejor forma de compartir información y tus ideas.
+                    Mucho más que ir a conferencias o salir en Youtube. Excepto si eres rockstar.
+                    Pero estadíosticamente no lo eres.... por ahora.
+                </p>
             </div>
         </div>
     </body>
