--- a/blogpost.html
+++ b/blogpost.html
@@ -10,12 +10,14 @@
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
-            <div id="post">
+	    <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
+		<p>Suscribete y dale like</p>
+		<p>Jose Gerardo Gomez</p>
+
 
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
