agregar mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <head>
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+		<p>Luis Vicente Albarracin</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
