--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de confianza </span>
+                Hyperblog <span id="tagline">Tu blog maestro </span>
             </div>
             <div id="post">
                 <h1>Este es el título increíble y atractivo</h1>
@@ -16,6 +16,7 @@
                     Mucho más que ir a conferencias o salir en Youtube. Excepto si eres rockstar.
                     Pero estadíosticamente no lo eres.... por ahora.
                 </p>
+                <p>Suscríbete y dale like</p>
             </div>
         </div>
     </body>
