--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Este es el título del post </title>
+        <title> Bienvenidos a Hyperblog </title>
         <link rel="stylesheet" href= "css/estilos.css" />
     </head>
     <body>
