--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,9 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
+                <p>Suscribete y dale like
+                <p>Esto probablemente no se vea, pero SIUUUUU. Gracias</p>
+                </p>
 
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
@@ -833,6 +835,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Jaider Alexander Zapata Osorio</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
