Ingresé mi nombre y corregí algunas tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -108,7 +108,7 @@
                 <p>Rodrigo Gaona</p>
                 <p>Octavio Moreno García</p>
                 <p>@rojasleon</p>
-                <p>Augusto C&aacuteceres Su&aacuterez</p>
+                <p>Augusto C&aacute;ceres Su&aacute;rez</p>
                 <p>Leonardo Ortiz L&oacute;pez</p>
                 <p>Junior Erny Aguayo Cuadros</p>
                 <p>Alejandro Dubon</p>
@@ -692,7 +692,7 @@
                 <p>Jayro Jesus Ku Salazar</p>
                 <p>@stephencatano</p>
                 <p>Alejandro Sánchez</p>
-                <p>Ren&eacute Sanchez</p>
+                <p>Ren&eacute; Sanchez</p>
                 <p>Monterrubio Peña Alberto</p>
                 <p>Jesús Rubén Esparza Soto</p>
                 <p>Richards Villanueva</p>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+		<p>Juan Beltran<p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
