Primera prueba de cherry

--- a/blogpost.html
+++ b/blogpost.html
@@ -836,7 +836,7 @@
                 <p>Juan Carlos Carbajal Salgado</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+              Platzi &lt;3 hehehe
             </div>
         </div>
     </body>
