Movido y agregado cambios

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
+                <p>Jonatan H</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
@@ -112,38 +113,6 @@
                 <p>Leonardo Ortiz L&oacute;pez</p>
                 <p>Junior Erny Aguayo Cuadros</p>
                 <p>Alejandro Dubon</p>
-                <p>Víctor Hugo Vázquez Gómez</p>
-                <p>Francisco Rojas</p>
-                <p>Gabriel Piñango</p>
-                <p>@matias4205</p>
-                <p>Andrescr99</p>
-                <p>Luis Rodrigo Alvarez Herrera</p>
-                <p>Camilo Gonzalez</p>
-                <p>RichardAml</p>
-                <p>Juan Jose Mayorga</p>
-                <p>Juan Pablo Garz&oacute;n</p>
-                <p>Mart&iacute;n De Jes&uacute;s Abarca</p>
-                <p>Samuel Mata</p>
-                <p>Melyssa Solano Diaz</p>
-                <p>Kenar716</p>
-                <p>Alcides León</p>
-                <p>Juan Diego Su&aacute;rez Mart&iacute;nez</p>
-                <p>Luis Armando Aguilar Pereyra</p>
-                <p>Fabia&acute;n Andr&racute; Garz&oacute;</p>
-                <p>Fernando Jose Alfonso Gimenez</p>
-                <p>@yejagoar</p>
-                <p>Gabriel Silva</p>
-                <p>Elisaul Yepez</p>
-                <p>Vittorio Carlo</p>
-                <p>Andr&eacute;s Campero</p>
-                <p>Luis Miguel Rodriguez</p>
-                <p>Stefany Vega López</p>
-                <p>Leonel Altamirano</p>
-                <p>Favio Sauto</p>
-                <p>Ericsson Ocas</p>
-                <p>Juan Pablo Villaplana Corrales</p>
-                <p>Patricio Cabrera</p>
-                <p>Daniela Alexandra Martinez</p>
                 <p>Julio Tobar</p>
                 <p>Diego Cuevas</p>
                 <p>Aurelio Guerrero</p>
@@ -178,6 +147,38 @@
                 <p>Oscar Sandoval Arellano</p>
                 <p>Dairo Aguas Barraza</p>
                 <p>H&eacute;ctor Torres</p>
+                <p>Víctor Hugo Vázquez Gómez</p>
+                <p>Francisco Rojas</p>
+                <p>Gabriel Piñango</p>
+                <p>@matias4205</p>
+                <p>Andrescr99</p>
+                <p>Luis Rodrigo Alvarez Herrera</p>
+                <p>Camilo Gonzalez</p>
+                <p>RichardAml</p>
+                <p>Juan Jose Mayorga</p>
+                <p>Juan Pablo Garz&oacute;n</p>
+                <p>Mart&iacute;n De Jes&uacute;s Abarca</p>
+                <p>Samuel Mata</p>
+                <p>Melyssa Solano Diaz</p>
+                <p>Kenar716</p>
+                <p>Alcides León</p>
+                <p>Juan Diego Su&aacute;rez Mart&iacute;nez</p>
+                <p>Luis Armando Aguilar Pereyra</p>
+                <p>Fabia&acute;n Andr&racute; Garz&oacute;</p>
+                <p>Fernando Jose Alfonso Gimenez</p>
+                <p>@yejagoar</p>
+                <p>Gabriel Silva</p>
+                <p>Elisaul Yepez</p>
+                <p>Vittorio Carlo</p>
+                <p>Andr&eacute;s Campero</p>
+                <p>Luis Miguel Rodriguez</p>
+                <p>Stefany Vega López</p>
+                <p>Leonel Altamirano</p>
+                <p>Favio Sauto</p>
+                <p>Ericsson Ocas</p>
+                <p>Juan Pablo Villaplana Corrales</p>
+                <p>Patricio Cabrera</p>
+                <p>Daniela Alexandra Martinez</p>
                 <p>raulfb</p>
                 <p>@jesus-olivares661</p>
                 <p>Julio Perdomo</p>
@@ -214,40 +215,6 @@
                 <p>Said Gonzalez</p>
                 <p>Álvaro López</p>
                 <p>Juan Pablo Celedon</p>
-                <p>José Luis López Zaragoza</p>
-                <p>mosqueradvd</p>
-                <p>Miguel Morales L.</p>
-                <p>Ricardo Zelada</p>
-                <p>Rodrigo Cruz</p>
-                <p>Victor Araya Romero</p>
-                <p>Luis Rangel Castro</p>
-                <p>Kathya Pravia</p>
-                <p>Javier V&aacute;squez</p>
-                <p>Roger Almengor</p>
-                <p>@javier-jimenez834</p>
-                <p>Daniel Bustamante C.</p>
-                <p>David Loreto</p>
-                <p>Alberto Gonz&aacute;lez Balderas</p>
-                <p>Andr&eacute;s Annicchiarico</p>
-                <p>Isela Ceballos</p>
-                <p>Melissa Alvarez</p>
-                <p>Esteban Castro</p>
-                <p>Sergio Rios</p>
-                <p>Gaston Caldera</p>
-                <p>Enrique G&aacute;lvez</p>
-                <p>William Eduardo Vel&aacute;zquez Amarra</p>
-                <p>Sol</p>
-                <p>Luis Carlos Zabala</p>
-                <p>Josue Ordonez</p>
-                <p>Isabel Buritic&aacute;</p>
-                <p>Vincent Bahena</p>
-                <p>Laura Marcela Caicedo Santoyo</p>
-                <p>Luis Eduardo Mu&ntilde;oz Diaz</p>
-                <p>BIKATTI</p>
-                <p>César Augusto Saucedo</p>
-                <p>Yoel Ribero</p>
-                <p>Jhon Carlos Colorado Angulo</p>
-                <p>Tlacaelel León</p>
                 <p>Jose Balcazar</p>
                 <p>Luis Eduardo Alan&iacute;s Villarreal</p>
                 <p>Elison S&aacute;nchez</p>
@@ -319,6 +286,40 @@
                 <p>Rhonald S&aacute;nchez</p>
                 <p>Junior De La Roche</p>
                 <p>@yersonsolorzanolopez<p>
+                <p>José Luis López Zaragoza</p>
+                <p>mosqueradvd</p>
+                <p>Miguel Morales L.</p>
+                <p>Ricardo Zelada</p>
+                <p>Rodrigo Cruz</p>
+                <p>Victor Araya Romero</p>
+                <p>Luis Rangel Castro</p>
+                <p>Kathya Pravia</p>
+                <p>Javier V&aacute;squez</p>
+                <p>Roger Almengor</p>
+                <p>@javier-jimenez834</p>
+                <p>Daniel Bustamante C.</p>
+                <p>David Loreto</p>
+                <p>Alberto Gonz&aacute;lez Balderas</p>
+                <p>Andr&eacute;s Annicchiarico</p>
+                <p>Isela Ceballos</p>
+                <p>Melissa Alvarez</p>
+                <p>Esteban Castro</p>
+                <p>Sergio Rios</p>
+                <p>Gaston Caldera</p>
+                <p>Enrique G&aacute;lvez</p>
+                <p>William Eduardo Vel&aacute;zquez Amarra</p>
+                <p>Sol</p>
+                <p>Luis Carlos Zabala</p>
+                <p>Josue Ordonez</p>
+                <p>Isabel Buritic&aacute;</p>
+                <p>Vincent Bahena</p>
+                <p>Laura Marcela Caicedo Santoyo</p>
+                <p>Luis Eduardo Mu&ntilde;oz Diaz</p>
+                <p>BIKATTI</p>
+                <p>César Augusto Saucedo</p>
+                <p>Yoel Ribero</p>
+                <p>Jhon Carlos Colorado Angulo</p>
+                <p>Tlacaelel León</p>
                 <p>Gonzalo Cofr&eacute;</p>
                 <p>Gerardo Ruiz Dana</p>
                 <p>Ricardo Coronado</p>
@@ -353,6 +354,38 @@
                 <p>AndresAzuara</p>
                 <p>Jhonatan Majin</p>
                 <p>Leonardo D. Medell&iacute;n</p>
+                <p>Jhon Romero</p>
+                <p>Felipe de Jesús</p>
+                <p>Angel Efrain Ordoñez Gonzalez</p>
+                <p>Eduardo Zamarrón Muñoz</p>
+                <p>Jairo Avelar Renteria</p>
+                <p>@efrainjaimes</p>
+                <p>Danilo Toro Labra</p>
+                <p>Jonathan Rangel Bernal</p>
+                <p>Jesus Leonardo Garcia Hoyos</p>
+                <p>Leonardo Rivero</p>
+                <p>Renato Johao Balcazar Loaiza</p>
+                <p>Pedro Chac&oacute;n</p>
+                <p>José Bryan Aranda Figueroa</p>
+                <p>@jesus-castellanos50</p>
+                <p>Hector Garzon</p>
+                <p>Ernesto Angulo</p>
+                <p>Engels Prado Herrera</p>
+                <p>Helman Bohorquez</p>
+                <p>Harold Bartolo</p>
+                <p>k7code</p>
+                <p>Christian Michelle Torres Mart&iacute;nez</p>
+                <p>@Le_MaliX</p>
+                <p>Frc Gustavo</p>
+                <p>Cristian Leiton Valencia</p>
+                <p>fchara</p>
+                <p>Víctor Alexander De Jesús De Nóbrega</p>
+                <p>Brandon Ramsel Vite Delgadillo</p>
+                <p>Angelica Acosta</p>
+                <p>H&eacute;ctor Olvera Vital</p>
+                <p>Rom&aacute;n Lop&eacute;z Garro</p>
+                <p>Juan Manuel Palacios</p>
+                <p>Eden Verdugo</p>
                 <p>aldoea</p>
                 <p>Elias Ojeda Medina</p>
                 <p>Nelson José Cadenas Araque</p>
@@ -386,38 +419,6 @@
                 <p>@jomilto</p>
                 <p>@mexicansauce</p>
                 <p>@JormanOT</p>
-                <p>Jhon Romero</p>
-                <p>Felipe de Jesús</p>
-                <p>Angel Efrain Ordoñez Gonzalez</p>
-                <p>Eduardo Zamarrón Muñoz</p>
-                <p>Jairo Avelar Renteria</p>
-                <p>@efrainjaimes</p>
-                <p>Danilo Toro Labra</p>
-                <p>Jonathan Rangel Bernal</p>
-                <p>Jesus Leonardo Garcia Hoyos</p>
-                <p>Leonardo Rivero</p>
-                <p>Renato Johao Balcazar Loaiza</p>
-                <p>Pedro Chac&oacute;n</p>
-                <p>José Bryan Aranda Figueroa</p>
-                <p>@jesus-castellanos50</p>
-                <p>Hector Garzon</p>
-                <p>Ernesto Angulo</p>
-                <p>Engels Prado Herrera</p>
-                <p>Helman Bohorquez</p>
-                <p>Harold Bartolo</p>
-                <p>k7code</p>
-                <p>Christian Michelle Torres Mart&iacute;nez</p>
-                <p>@Le_MaliX</p>
-                <p>Frc Gustavo</p>
-                <p>Cristian Leiton Valencia</p>
-                <p>fchara</p>
-                <p>Víctor Alexander De Jesús De Nóbrega</p>
-                <p>Brandon Ramsel Vite Delgadillo</p>
-                <p>Angelica Acosta</p>
-                <p>H&eacute;ctor Olvera Vital</p>
-                <p>Rom&aacute;n Lop&eacute;z Garro</p>
-                <p>Juan Manuel Palacios</p>
-                <p>Eden Verdugo</p>
                 <p>Omar Alejandro Pelcastre</p>
                 <p>Daniel Alejandro Vera Ch&aacute;vez</p>
                 <p>Walter Salas</p>
@@ -446,6 +447,23 @@
                 <p>Alberth Perez</p>
                 <p>José Luis</p>
                 <p>Denisse Rivas</p>
+                <p>Wilmer Zelada</p>
+                <p>Daniela T</p>
+                <p>4mjaimes</p>
+                <p>Fernando Garc&iacute;a</p>
+                <p>Miguel U</p>
+                <p>Moon Sugar</p>
+                <p>@bluesmoss</p>
+                <p>ThankedPizza</p>
+                <p>Nick Fuenmayor</p>
+                <p>Gabriel G&oacute;mez</p>
+                <p>Eduardo García</p>
+                <p>Alejandro Tinoco</p>
+                <p>Juan David Marin Bernal</p>
+                <p>Joshua</p>
+                <p>Marcial Ambriz</p>
+                <p>Andr&eacute;s Moreno</p>
+                <p>Luciano Natiello</p>
                 <p>Fernando Dominguez</p>
                 <p>Carlos Santaniello</p>
                 <p>Cristina Rueda</p>
@@ -476,23 +494,6 @@
                 <p>Iv&aacute;n Moreno</p>
                 <p>Juan Sebastian Otero</p>
                 <p>Rodrigo Figueroa Salmoran</p>
-                <p>Wilmer Zelada</p>
-                <p>Daniela T</p>
-                <p>4mjaimes</p>
-                <p>Fernando Garc&iacute;a</p>
-                <p>Miguel U</p>
-                <p>Moon Sugar</p>
-                <p>@bluesmoss</p>
-                <p>ThankedPizza</p>
-                <p>Nick Fuenmayor</p>
-                <p>Gabriel G&oacute;mez</p>
-                <p>Eduardo García</p>
-                <p>Alejandro Tinoco</p>
-                <p>Juan David Marin Bernal</p>
-                <p>Joshua</p>
-                <p>Marcial Ambriz</p>
-                <p>Andr&eacute;s Moreno</p>
-                <p>Luciano Natiello</p>
                 <p>Andr&eacute;s Barroso</p>
                 <p>Mario Gordon</p>
                 <p>Eduardo Kiriakos</p>
@@ -544,6 +545,18 @@
                 <p>Gerald Zamora</p>
                 <p>Rina Plata</p>
                 <p>Christian Bacilio</p>
+                <p>Nancy Her</p>
+                <p>Maxi G&oacute;mez</p>
+                <p>Edwin Ch&eacute;vez</p>
+                <p>Oscar Antonio Ruiz Juarez</p>
+                <p>Manuel Aguilera</p>
+                <p>Pablo Madriz</p>
+                <p>Claudia Aparicio</p>
+                <p>KevinFer</p>
+                <p>hectormalbe</p>
+                <p>Cristian Rub&eacute;n Pereyra</p>
+                <p>Edwin Pedraza</p>
+                <p>Karla Agraz</p>
                 <p>Mauricio Tequita</p>
                 <p>Daniel Pat</p>
                 <p>Oriana Reina</p>
@@ -562,18 +575,6 @@
                 <p>Gabriel Luna</p>
                 <p>OmarGnzlz645</p>
                 <p>Duvan Molina</p>
-                <p>Nancy Her</p>
-                <p>Maxi G&oacute;mez</p>
-                <p>Edwin Ch&eacute;vez</p>
-                <p>Oscar Antonio Ruiz Juarez</p>
-                <p>Manuel Aguilera</p>
-                <p>Pablo Madriz</p>
-                <p>Claudia Aparicio</p>
-                <p>KevinFer</p>
-                <p>hectormalbe</p>
-                <p>Cristian Rub&eacute;n Pereyra</p>
-                <p>Edwin Pedraza</p>
-                <p>Karla Agraz</p>
                 <p>XhrisGab</p>
                 <p>Angel Angel Velez</p>
                 <p>Marvin Abrego</p>
@@ -768,6 +769,17 @@
                 <p>Kevin Humberto Leon Santamaria</p>
                 <p>Valentino Torres</p>
                 <p>@pollorius</p>
+                <p>Juan Zabala</p>
+                <p>Angel Mambel</p>
+                <p>Mauricio Combariza</p>
+                <p>Oscar Mizael Nuñez Garcia</p>
+                <p>aviloncho</p>
+                <p>Dal&iacute; Andr&eacute;s Ju&aacute;rez Vel&aacute;zquez</p>
+                <p>@CristianSCh</p>
+                <p>Luis Gonz&aacute;lez</p>
+                <p>Jose Requena</p>
+                <p>Juan Ramón Ruiz Rocha</p>
+                <p>goocube</p>
                 <p>Gustavo Arana Osorio</p>
                 <p>Azael Ortega</p>
                 <p>Jos&eacute; Tuzinkievicz</p>
@@ -806,17 +818,6 @@
                 <p>Esteban Saldarriaga Alzate</p>
                 <p>Carlos Opazo Rosales</p>
                 <p>Juan Sebastian Durango Mora</p>
-                <p>Juan Zabala</p>
-                <p>Angel Mambel</p>
-                <p>Mauricio Combariza</p>
-                <p>Oscar Mizael Nuñez Garcia</p>
-                <p>aviloncho</p>
-                <p>Dal&iacute; Andr&eacute;s Ju&aacute;rez Vel&aacute;zquez</p>
-                <p>@CristianSCh</p>
-                <p>Luis Gonz&aacute;lez</p>
-                <p>Jose Requena</p>
-                <p>Juan Ramón Ruiz Rocha</p>
-                <p>goocube</p>
                 <p>Fernando Gualan Camacho</p>
                 <p>Jorge Alberto Delgadillo Alonso</p>
                 <p>ChristianPastor</p>
