--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
-              	<p>Giselle Castillo</p>
+                <p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
@@ -833,9 +833,10 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Juan Jos&eacute; Jara Calle</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+            Hecho con amor en Platzi &lt;3
             </div>
         </div>
     </body>
