Ya puse mi nombre en un nuevo parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas.</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un Rockstar. Pero estadísitcamente no lo eres...... Por ahora.</p>
             <p>Suscribete y dale like !</p>
-            <p>Soy Laura Tom&eacurate; o Kortahna</p>
+            <p>Soy Laura Tom&eacute; o Kortahna</p>
         </div>
         <div id="footer">
             <div>Cambio 3</div>
