--- a/blogpost.html
+++ b/blogpost.html
@@ -17,12 +17,13 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
+                <p>Jorge Hern&aacute;ndez</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
-                <p>Ismael Dominguez Moreno</p>
+                <p>Ismael Dominguez Morenso</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
               	<p>Giselle Castillo</p>
