--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
+                <p>Sobsdroidboy</p>
                 <p>Sebastián Villafañe</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
@@ -833,7 +834,6 @@
                 <p>Mario Yesid Acuña Garizado</p>
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
-                <p>SobsDroidBoy</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
