--- a/blogpost.html
+++ b/blogpost.html
@@ -834,7 +834,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-                <p>Juan Riquelme</p>
+                <p>Juan Riquelme Romero</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
