Agregué mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -609,6 +609,7 @@
                 <p>Jesus Padron</p>
                 <p>John Steven Bernal</p>
                 <p>Humberto Lopez Luciano</p>
+                <p>Dylan Anthony Silva Crisp&iacute;n</p>
                 <p>Valeria Brito</p>
                 <p>David Pe&ntilde;avasquez Vasquez</p>
                 <p>Iv&aacute;n Jos&eacute; Campo De Martino</p>
