--- a/blogpost.html
+++ b/blogpost.html
@@ -15,13 +15,13 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                <p>Ana Camila Rozo 2021</p>
                 <p>Suscribete y dale like</p>
-
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
-                <p>Moises Patiño</p>  
+                <p>Moises Patiño</p>
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
