Nombre agregado con éxito, saludos

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
+                <p>daorregoc</p>
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
