Please add me to the blogpost.html
Completando el desafío de la clase de Git y Github.

--- a/blogpost.html
+++ b/blogpost.html
@@ -833,7 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-                <p>Jos&eocute; Oveniel Gald&aacute;mez Ramos</p>
+                <p>Jos&eacute; Oveniel Gald&aacute;mez Ramos</p>
             
             </div>
             <div id="footer">
