mensaje de contribucion

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,11 +13,12 @@
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <!-- <p><img src="imagenes/equipo.jpg" width="100%" /></p>  La imagen esta danada!! - Hay que resolverlo! -->
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
                 <p>Sergio Iván Piñón Peña</p>
+                <a href="https://instagram.com/jairoramirezu">Jairo Ram&iacute;rez</a>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
