--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 <span id="tagline">Bienvenido</span>
             </div>
             <div id="post">
-                Hola
+                Hola que hay de nuevo
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p><img src="imagenes/equipo.jpg" width="100%" /></p>
