--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
-              	<p>Giselle Castillo</p>
+                <p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
@@ -833,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>alexsencion</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
