--- a/blogpost.html
+++ b/blogpost.html
@@ -17,11 +17,12 @@
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
+                <p>Yunuen Magaña</p>
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
-                <p>Moises Patiño</p>  
+                <p>Moises Patiño</p>
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
