Agregue mi nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,7 @@
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
               	<p>Giselle Castillo</p>
+                <p>Roberto Gonzalez</p>
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
