--- a/blogpost.html
+++ b/blogpost.html
@@ -13,8 +13,8 @@
             <div id="post">
                 <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                <p>Suscr&iacute;bete y dale like</p>
             </div>
 	    <div id="footer">
 		Hecho con amor en Platzi &lt;3
