Agregué mi nombre!!

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                 <p>Edgar Barragán</p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
+		<p>Kevin David Garc&iacute;a Castillo</p>
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
