--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,7 @@
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
+                <p>QEPWEB</p>
                 <p>rafaelrrp</p>
               	<p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
