Mi nombre agregado

--- a/blogpost.html
+++ b/blogpost.html
@@ -119,6 +119,7 @@
                 <p>Andrescr99</p>
                 <p>Luis Rodrigo Alvarez Herrera</p>
                 <p>Camilo Gonzalez</p>
+                <p>Javier Monge</p>
                 <p>RichardAml</p>
                 <p>Juan Jose Mayorga</p>
                 <p>Juan Pablo Garz&oacute;n</p>
