Tildes con acentos y mensaje de contribucion

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
