--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <title>Hyperblog 2.0 es un blog del futuro</title>
+        <title>Este es el inicio de un gran proyecto de vida</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
