Agregando mi nombre al fork

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,5 @@
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
@@ -834,6 +833,7 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Rafael Junior Ortiz Sanchez</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
