una experiancia unica

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
+                Hyperblog Una experiancia unica
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
