Se inicia la versión 3.0

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Hyperblog 2.0 es un blog del futuro</title>
+        <title>Hyperblog 3.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
+                Hyperblog 3.0
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
