Nuevo nombre en el proyecto

--- a/blogpost.html
+++ b/blogpost.html
@@ -656,6 +656,7 @@
                 <p>Miguel Herrea</p>
                 <p>chrisgonzalezoficial</p>
                 <p>Tinchoram</p>
+                <p>Mer7z</p>
                 <p>Luis Sanoja</p>
                 <p>Oscar H Lucas C</p>
                 <p>Demetrio Cumplido Narciso</p>
