Cambio para el Futuro

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hyperblog 2.0 es un blog del futuro</title>
+        <title>Hyperblog 2.0 es un blog para el futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
