--- a/blogpost.html
+++ b/blogpost.html
@@ -834,6 +834,7 @@
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
                 <p>Juan Jose Gamboa Sanabria</p>
+                <p>Juan Jose Gamboa Sanabria 2</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
