--- a/blogpost.html
+++ b/blogpost.html
@@ -836,7 +836,7 @@
                 <p>Marlon Murcia Betancourt</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+              Hecho con amor en Platzi!! &lt;3
             </div>
         </div>
     </body>
