Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
                 Hyperblog
                 <span id="tagline">Tu blog 
                 de cabecera</span>
