Cabecera futher terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -29,6 +29,10 @@
                 <p>
                     Suscribete y dale like
                 </p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi
+            </div>
             <div>
         <div>
     </body>
