Cambio a entidades HTML en evz de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,16 +16,16 @@
                 <h1> Este es el titulo 
                 atractivo e interesante 
                 del post </h1>
-                <p> Y este es el párrafo 
+                <p> Y este es el p&aacute;rrafo 
                 de inicio donde vamos a explicar
-                las cosas increíbles que se pueden 
+                las cosas incre&iacute;bles que se pueden 
                 hacer con ramas </p>
                 <p>
                     Los blogs son la mejor forma de 
                     compartir informacion y tus udeas.
                     Mucho mas que ir a conferencias o 
                     salor en Youtube. Excepto si eres
-                    un rockstar. Pero estadísticamente 
+                    un rockstar. Pero estad&iacute;sticamente 
                     no lo eres.... por ahora.
                 </p>
                 <p>
