sugerencia de agregar meta charset utf-8

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
