--- a/blogpost.html
+++ b/blogpost.html
@@ -833,6 +833,8 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
+                <p>Mishelle126</p>
+                <p>Lo AMOOOOOO MUCHOOO </p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
