Corrección de un error

--- a/blogpost.html
+++ b/blogpost.html
@@ -842,7 +842,7 @@
             <p>Omar Roa</p>
             <p>@dmoralesk</p>
             <p>Juan Carlos Carbajal Salgado</p>
-            <p>Eder Ra&uacute;
+            <p>Eder Ra&uacute;l
             <p>
         </div>
         <div id="footer">
