Agregando nuevo nombre
Se agrego nuevo nombre

--- a/blogpost.html
+++ b/blogpost.html
@@ -30,6 +30,7 @@
                 <p>JuanDC</p>
                 <p>@elyager</p>
                 <p>JamaHCS</p>
+                <p>Johnatan </p>
                 <p>Oscar Daniel</p>
                 <p>Claudio Vazquez<p>
                 <p>Juan Ageitos</p>
