Elimine una imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,8 @@
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="https://imgur.com/7FdhngG" width="100%" /></p>
+                
+                <!-- <p><img src="https://imgur.com/7FdhngG" width="100%" /></p> --> 
                 <a href="https://imgur.com/7FdhngG"><img src="https://i.imgur.com/7FdhngG.png" title="source: imgur.com" /></a>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
