Se agregó un tercer parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -25,6 +25,9 @@
             <p>
                 Una de las principales características de la minería es la concentración de recursos. Es decir, que requiere de una gran cantidad de potencia informática que pueda cumplir con las exigencias de minería. Además de permitir que todos los participantes de la red minera se pongan de acuerdo sobre la eficacia y precisión de la cadena de bloques. Además, no solo se debe contar con una gran máquina de minería de potencia informática, también se debe garantizar una red de energía eléctrica estable.<
             </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate rem quibusdam recusandae nobis, adipisci est!
+            </p>
         </div>
     </div>
 </body>
