modifique el header y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="cabecera">
             <ul>
-                <li><a href="#">Home</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="#">Tu mamá</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Nosotros</a></li>
             </ul>
