agregue sub, cambio de header y color de texto a marron

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="cabecera">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Raul</a></li>
+                <li><a href="#">Salinas</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Nosotros</a></li>
             </ul>
@@ -27,6 +27,9 @@
             </p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate rem quibusdam recusandae nobis, adipisci est!
+            </p>
+            <p>
+                suscribete y dale like
             </p>
         </div>
     </div>
