Se añadio el footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -32,6 +32,10 @@
                 suscribete y dale like
             </p>
         </div>
+        <footer>
+            Este es un super footer :)
+        </footer>
     </div>
+    
 </body>
 </html>
