Correción en el header

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div class="cabecera">
             <ul>
                 <li><a href="#">Contacto</a></li>
-                <li><a href="#">Tu mamá</a></li>
+                <li><a href="#">Equipo</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Nosotros</a></li>
             </ul>
