adding image .jpg py

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
+                <img id="py" src="imagenes/py.jpg" />
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
