Este es mi usuario de GitHub

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
+                <p>Ayda Montoya</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
               	<p>Giselle Castillo</p>
