cambio al tag line y color del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 <img id="logo" src="imagenes/dragon.png" />
                 <img id="py" src="imagenes/py.jpg" />
                 Hyperblog
-                <span id="tagline">Tu blog de CABECERA</span>
+                <span id="tagline">Tu blog de CONFIANZA</span>
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
