--- a/blogpost.html
+++ b/blogpost.html
@@ -833,10 +833,10 @@
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
                 <p>Juan Carlos Carbajal Salgado</p>
-                <p>Oscar Fernando Flores Arrieta</p>
+                <p>&Oacute;scar Fernando Flores Arrieta</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+              Hecho con amor en Platzi  &lt;3
             </div>
         </div>
     </body>
