Nuevo parrafo con mi Nombre :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,7 @@
 
                 <p>Sergio Iván Piñón Peña</p>
                 <p>Edgar Barragán</p>
+		<p><i>Naren Fragozo Manjarres</i></p>
                 <p>@luiscarlos</p>
                 <p>Christopher Andrés Acevedo Galo</p>
                 <p>Moises Patiño</p>  
