--- a/blogpost.html
+++ b/blogpost.html
@@ -190,6 +190,7 @@
                 <p>Héctor Reyes</p>
                 <p>@moises10</p>
                 <p>Manuel Rojo</p>
+		<p>Esclender Lugo</p>
                 <p>Oriol C</p>
                 <p>Alexander Bran</p>
                 <p>Gregoris solis</p>
