Se hacen muchos cambios a la página

--- a/articulo.html
+++ b/articulo.html
@@ -1,9 +1,16 @@
 <html>
     <head>
         <title>Título de la publicación</title>
+        <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí vamos a hacer una publicación</h1>
-        <p>Éste es el párrafo de inicio.</p>
+        <div id="container">
+            <div id="post">
+                <h1>Un título atractivo e interesante</h1>
+                <p>Éste es el párrafo de inicio, el que mostramos las
+                    cosas increíbles que se pueden hacer con ramas
+                </p>
+            </div>
+        </div>
     </body>
 </html>
